add pod metric. extract metric.go
