# docs/swagger.yaml
@@ -397,6 +397,9 @@ definitions:
       createTime:
         description: '@description 创建时间'
         type: string
+      hostIp:
+        description: '@description 宿主机地址'
+        type: string
       id:
         type: string
       label:
@@ -410,9 +413,15 @@ definitions:
         type: string
       nodeName:
         type: string
+      podIp:
+        description: '@description 容器IP'
+        type: string
       resource:
         $ref: '#/definitions/model.ResourceDetail'
         type: object
+      restartCount:
+        description: '@description 重启次数'
+        type: integer
       status:
         description: '@description 状态 可选 Pending：正在启动 Running：运行中 Succeeded：部署成功未启动 Failed：失败 Unknown：未知'
         type: string
